[package]
name = "pathed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
url = "2.2.2"
webbrowser = "0.7.1"
winapi = {version = "0.3.9", features = ["wincon", "winuser"]}
