[package]
name = "pathed"
version = "0.1.0"
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  {version = "4.5.31 ", features = ["derive"] }
webbrowser = "1.0.3"
winapi = { version = "0.3.9", features = ["wincon", "winuser"] }
windows = "0.60.0"
# https://crates.io/crates/url_encoded_data ?

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
